openshift/deploymentconfig-ezlearning.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:

  name: ezlearning
   
  namespace: project1
  labels:
    app: ezlearning
   
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-ubi8
spec:
  
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - ezlearning
        from:
          kind: ImageStreamTag
          namespace: project1
          name: 'ezlearning:latest'
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: ezlearning
    deploymentconfig: ezlearning
  template:
    metadata:
      
      labels:
        app: ezlearning
        deploymentconfig: ezlearning
    spec:
      containers:
        - name: ezlearning
          image: 'image-registry.openshift-image-registry.svc:5000/attempt5/ez-learning-git-new:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
