openshift/deploymentconfig-mariadb.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
  name: mariadb
  namespace: project1
  labels:
    template: mariadb-persistent-template
    template.openshift.io/template-instance-owner: 2b96a06c-fb03-48a8-8c39-f04b12a4aa10
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - mariadb
        from:
          kind: ImageStreamTag
          namespace: openshift
          name: 'mariadb:10.3-el8'
        lastTriggeredImage: >-
          image-registry.openshift-image-registry.svc:5000/openshift/mariadb@sha256:7bbdf23f70c04880c568b69de217145b6a91cf9adba37a044ad82a426e501e4e
    - type: ConfigChange
  replicas: 0
  revisionHistoryLimit: 10
  test: false
  selector:
    name: mariadb
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: mariadb
    spec:
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb
      containers:
        - resources:
            limits:
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - MYSQL_PWD="$MYSQL_PASSWORD" mysqladmin -u $MYSQL_USER ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: mariadb
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - MYSQL_PWD="$MYSQL_PASSWORD" mysqladmin -u $MYSQL_USER ping
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 3306
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql/data
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/mariadb@sha256:7bbdf23f70c04880c568b69de217145b6a91cf9adba37a044ad82a426e501e4e
