openshift/service-ezlearning.yaml
kind: Service
apiVersion: v1
metadata:
  name: ezlearningservice
  namespace: project1
  labels:
    app: ezlearning
 
  
spec:
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
    - name: 1738-tcp
      protocol: TCP
      port: 1738
      targetPort: 1738
  
  
  selector:
    app: ezlearning
    deploymentconfig: ezlearning
status:
  loadBalancer: {}
