openshift/route-ezlearning.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ezlearningroute
  namespace: project1
  labels:
    app: ezlearning
 
spec:
 
  to:
    kind: Service
    name: ezlearning
  port:
    targetPort: 8081
  wildcardPolicy: None
